--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <li class="item">
                     <a class="contact link mail" href="mailto:info@devstudio.com">
                         <svg class="header-icon" width="16" height="12">
-                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                            <use href="./images/icons.svg#icon-envelope"></use>
                         </svg> 
                         info@devstudio.com</a>
                 </li>
                 <li class="item">
                     <a class="contact link tel" href="tel:+380961111111">
                         <svg class="header-icon" width="10" height="16">
-                            <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                            <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11</a>
                 </li>
@@ -53,7 +53,7 @@
                     <li class="list-section-item antenna">
                       <div class="section-picture">
                           <svg class="section-icon" width="70" height="70">
-                              <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                              <use href="./images/icons.svg#icon-antenna"></use>
                           </svg>
                       </div>
                       <h3 class="section-title">Внимание к деталям</h3>
@@ -62,7 +62,7 @@
                     <li class="list-section-item clock">
                         <div class="section-picture">
                             <svg class="section-icon" width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                       <h3 class="section-title">Пунктуальность</h3>
@@ -71,7 +71,7 @@
                     <li class="list-section-item diagram">
                         <div class="section-picture">
                             <svg class="section-icon" width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                       <h3 class="section-title">Планирование</h3>
@@ -80,7 +80,7 @@
                     <li class="list-section-item astronaut">
                         <div class="section-picture">
                             <svg class="section-icon" width="70" height="70">
-                                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                       <h3 class="section-title">Современные технологии</h3>
@@ -120,28 +120,28 @@
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                            <use href="./images/icons.svg#icon-instagram1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                            <use href="./images/icons.svg#icon-twitter1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                            <use href="./images/icons.svg#icon-facebook1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -157,28 +157,28 @@
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                            <use href="./images/icons.svg#icon-instagram1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                            <use href="./images/icons.svg#icon-twitter1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                            <use href="./images/icons.svg#icon-facebook1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -194,28 +194,28 @@
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                            <use href="./images/icons.svg#icon-instagram1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                            <use href="./images/icons.svg#icon-twitter1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                            <use href="./images/icons.svg#icon-facebook1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -231,28 +231,28 @@
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                            <use href="./images/icons.svg#icon-instagram1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                            <use href="./images/icons.svg#icon-twitter1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                            <use href="./images/icons.svg#icon-facebook1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-contact-item">
                                     <a href="" class="link social-team">
                                         <svg class="icon-social" width="20" height="20">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -271,42 +271,42 @@
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client1"></use>
+                                <use href="./images/icons.svg#icon-client1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client2"></use>
+                                <use href="./images/icons.svg#icon-client2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client3"></use>
+                                <use href="./images/icons.svg#icon-client3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client4"></use>
+                                <use href="./images/icons.svg#icon-client4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client5"></use>
+                                <use href="./images/icons.svg#icon-client5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client6"></use>
+                                <use href="./images/icons.svg#icon-client6"></use>
                             </svg>
                         </a>
                     </li>
@@ -330,35 +330,35 @@
            <div class="footer-social">
                <p class="social-text">Присоединяйтесь</p>
                <ul class="list footer-list-social">
-                <li class="footer-social-item">
-                    <a href="" class="link social-footer-link">
-                        <svg class="icon-social-footer" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-item">
-                    <a href="" class="link social-footer-link">
-                        <svg class="icon-social-footer" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-item">
-                    <a href="" class="link social-footer-link">
-                        <svg class="icon-social-footer" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-item">
-                    <a href="" class="link social-footer-link">
-                        <svg class="icon-social-footer" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+                    <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                          <svg class="icon-social-footer" width="20" height="20">
+                              <use href="./images/icons.svg#icon-instagram1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                           <svg class="icon-social-footer" width="20" height="20">
+                              <use href="./images/icons.svg#icon-twitter1"></use>
+                           </svg>
+                       </a>
+                   </li>
+                   <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                           <svg class="icon-social-footer" width="20" height="20">
+                               <use href="./images/icons.svg#icon-facebook1"></use>
+                           </svg>
+                       </a>
+                   </li>
+                   <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                           <svg class="icon-social-footer" width="20" height="20">
+                               <use href="./images/icons.svg#icon-linkedin1"></use>
+                           </svg>
+                       </a>
+                   </li>
+               </ul>
                
             </div>
         </div>
