--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,14 @@
                 <li class="item">
                     <a class="contact link mail" href="mailto:info@devstudio.com">
                         <svg class="header-icon" width="16" height="12">
-                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                            <use href="./images/icons.svg#icon-envelope"></use>
                         </svg> 
                         info@devstudio.com</a>
                 </li>
                 <li class="item">
                     <a class="contact link tel" href="tel:+380961111111">
                         <svg class="header-icon" width="10" height="16">
-                            <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                            <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11</a>
                 </li>
@@ -160,35 +160,35 @@
             <div class="footer-social">
                 <p class="social-text">Присоединяйтесь</p>
                 <ul class="list footer-list-social">
-                 <li class="footer-social-item">
-                     <a href="" class="link social-footer-link">
-                         <svg class="icon-social-footer" width="20" height="20">
-                             <use href="./images/symbol-defs.svg#icon-instagram1"></use>
-                         </svg>
-                     </a>
-                 </li>
-                 <li class="footer-social-item">
-                     <a href="" class="link social-footer-link">
-                         <svg class="icon-social-footer" width="20" height="20">
-                             <use href="./images/symbol-defs.svg#icon-twitter1"></use>
-                         </svg>
-                     </a>
-                 </li>
-                 <li class="footer-social-item">
-                     <a href="" class="link social-footer-link">
-                         <svg class="icon-social-footer" width="20" height="20">
-                             <use href="./images/symbol-defs.svg#icon-facebook1"></use>
-                         </svg>
-                     </a>
-                 </li>
-                 <li class="footer-social-item">
-                     <a href="" class="link social-footer-link">
-                         <svg class="icon-social-footer" width="20" height="20">
-                             <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
-                         </svg>
-                     </a>
-                 </li>
-             </ul>
+                    <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                          <svg class="icon-social-footer" width="20" height="20">
+                              <use href="./images/icons.svg#icon-instagram1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                           <svg class="icon-social-footer" width="20" height="20">
+                              <use href="./images/icons.svg#icon-twitter1"></use>
+                           </svg>
+                       </a>
+                   </li>
+                   <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                           <svg class="icon-social-footer" width="20" height="20">
+                               <use href="./images/icons.svg#icon-facebook1"></use>
+                           </svg>
+                       </a>
+                   </li>
+                   <li class="footer-social-item">
+                       <a href="" class="link social-footer-link">
+                           <svg class="icon-social-footer" width="20" height="20">
+                               <use href="./images/icons.svg#icon-linkedin1"></use>
+                           </svg>
+                       </a>
+                   </li>
+               </ul>
                 
              </div>
          </div>
